[package]
name = "opinion_trade_sdk"
version = "0.1.0"
edition = "2024"
description = "Unofficial Rust SDK for opinion.trade OpenAPI and WebSocket"
license = "MIT"

[dependencies]
futures-util = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
backoff = { version = "0.4", features = ["tokio"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
url = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "orderbook"
harness = false
